# cp-ast-ecosystems

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  debug_test.rs  fix.md  fix2.md  mise.toml  test_edge_cases.rs  test_overflow.rs
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml  web.yml
crates/cp-ast-core/: Cargo.toml  README.md
crates/cp-ast-core/src/: lib.rs
crates/cp-ast-core/src/constraint/: constraint.rs  constraint_id.rs  constraint_set.rs  expected_type.rs  expression.rs  mod.rs  types.rs
crates/cp-ast-core/src/operation/: action.rs  constraint_ops.rs  draft_action.rs  engine.rs  error.rs  fill_hole.rs  mod.rs  multi_test_case.rs  node_ops.rs  result.rs  slot_kind.rs  types.rs
crates/cp-ast-core/src/projection/: api.rs  editor_projection.rs  full_projection.rs  mod.rs  projection_impl.rs  types.rs
crates/cp-ast-core/src/render/: constraint_ast.rs  constraint_text.rs  input_format.rs  mod.rs
crates/cp-ast-core/src/render_tex/: constraint_tex.rs  input_tex.rs  mod.rs  tex_helpers.rs
crates/cp-ast-core/src/sample/: dependency.rs  generator.rs  mod.rs  output.rs
crates/cp-ast-core/src/structure/: mod.rs  node_id.rs  node_kind.rs  reference.rs  slot.rs  structure_ast.rs  structure_node.rs  tree_visitor.rs  types.rs
crates/cp-ast-core/tests/: add_sibling.rs  constraint_ast.rs  constraint_basic.rs  constraint_types.rs  draft_action.rs  e2e_abc284c.rs  editor_integration.rs  editor_projection_tests.rs  fill_content_templates.rs  full_projection.rs  gap_resolution.rs  hole_basic.rs  operation_basic.rs  operation_error_tests.rs  projection_basic.rs  raw_parts.rs  render_basic.rs  render_tex_basic.rs  sample_basic.rs  slot_kind_tests.rs  structure_ast.rs  structure_basic.rs  structure_primitives.rs  tree_visitor_basic.rs  typical_problem.rs
crates/cp-ast-json/: Cargo.toml
crates/cp-ast-json/src/: action_dto.rs  dto.rs  error.rs  from_dto.rs  lib.rs  projection_dto.rs  share_state.rs  to_dto.rs
crates/cp-ast-json/tests/: action_roundtrip.rs  editor_dto_tests.rs  golden.rs  js_bridge.rs  roundtrip.rs
crates/cp-ast-json/tests/golden/: basic_array.json
crates/cp-ast-tree/: Cargo.toml
crates/cp-ast-tree/examples/: README.md  array_sum.rs  graph.rs  holes.rs  matrix.rs  multi_testcase.rs  query.rs  strings.rs
crates/cp-ast-tree/src/: combined_tree.rs  constraint_tree.rs  drawing.rs  lib.rs  structure_tree.rs
crates/cp-ast-tree/tests/: tree_basic.rs
crates/cp-ast-wasm/: Cargo.toml
crates/cp-ast-wasm/src/: lib.rs  presets.rs
doc/: reference.md
doc/design/: domain-model.md  final-design.md  projection-operation.md
doc/plan/: ast-draft.md  main.md  processing.md  repository-split.md
doc/plan/ast-core/: execution.md  initial-prompt.md  modules.md
doc/plan/ast-json/: initial.md
doc/plan/ast-sample/: feedback.md
doc/plan/ast-tex/: initial-prompt.md  planning-detail-prompt.md
doc/plan/ast-view/: initial.md
doc/plan/test/: plan.md
doc/plan/web-view/: plan.md  process.md
doc/review/: coverage-validation.md  critical-review.md  sample-generation.md
doc/survey/: atcoder-coverage-extended.md  research-alignment-report.md  site-survey-report.md
doc/view/: coverage-scenario-index.md  plan.md  problem-user-flows.md  proccess.md
docs/superpowers/plans/: 2026-04-12-cp-ast-ecosystems.md  2026-04-12-cp-ast-phase1-continuation.md  2026-04-13-ast-tex-renderer-plan.md  2026-04-13-ast-tree-viewer.md  2026-04-13-sample-generation-phase-a-plan.md  2026-04-14-ast-json.md  2026-04-14-ast-viewer-frontend.md  2026-04-14-gap-resolution.md  2026-04-19-subproject-a-atcoder-investigation.md  2026-04-19-subproject-bc-editor.md
docs/superpowers/specs/: 2026-04-12-cp-ast-ecosystems-design.md  2026-04-13-ast-tex-renderer-design.md  2026-04-13-ast-tree-viewer-design.md  (+6 more)
web/: AGENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: editor.spec.ts  navigation.spec.ts  viewer.spec.ts
web/playwright-report/: index.html
web/src/: app.tsx  index.css  main.tsx  share-state.ts  state.ts  wasm.ts
web/tests/: editor-e2e.test.ts  setup.ts
(+60 files in other folders)
