[package]
name = "cp-ast-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core AST types for competitive programming problem specification DSL"
repository = "https://github.com/manabeai/cp-ast-ecosystems"
homepage = "https://github.com/manabeai/cp-ast-ecosystems"
documentation = "https://docs.rs/cp-ast-core"
readme = "README.md"
keywords = ["ast", "dsl"]

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[lints]
workspace = true
