[package]
name = "cp-ast-json"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lossless JSON serialization boundary for cp-ast-core AST"

[dependencies]
cp-ast-core = { path = "../cp-ast-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
