[package]
name = "cp-ast-json"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Lossless JSON serialization boundary for cp-ast-core AST"
repository = "https://github.com/manabeai/cp-ast-ecosystems"
homepage = "https://github.com/manabeai/cp-ast-ecosystems"
documentation = "https://docs.rs/cp-ast-json"
keywords = ["ast", "json", "dsl"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base64 = "0.22"
cp-ast-core = { version = "0.1.5", path = "../cp-ast-core" }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
