[package]
name = "cp-ast-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly bindings for cp-ast-core AST viewer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cp-ast-core = { path = "../cp-ast-core" }
cp-ast-tree = { path = "../cp-ast-tree" }
cp-ast-json = { path = "../cp-ast-json" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
