[package]
name = "cp-ast-wasm"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly bindings for cp-ast-core AST viewer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cp-ast-core = { version = "0.1.3", path = "../cp-ast-core" }
cp-ast-tree = { version = "0.1.3", path = "../cp-ast-tree" }
cp-ast-json = { version = "0.1.3", path = "../cp-ast-json" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
